--- a/public/CostumStyle/css/notfound.css
+++ b/public/CostumStyle/css/notfound.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap');
-
+html{
+    scroll-behavior: smooth;
+}
 body{
     margin: 0;
     padding: 0;
     font-family: 'Josefin Sans', sans-serif;
     min-height: 100vh;
     background-color: #6994FA;
+    overflow: hidden;
 }
 .container{
     width: 100%;
