--- a/public/CostumStyle/style.css
+++ b/public/CostumStyle/style.css
@@ -6,13 +6,17 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
+:root{
+  --blue: #6994FA;
+  --green: #69face;
+  --purple: #9c69fa;
+}
 .sidebar{
   position: fixed;
   left: 0;
   top: 0;
   height: 100%;
   width: 78px;
-  background: #11101D;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
