--- a/public/CostumStyle/css/app.css
+++ b/public/CostumStyle/css/app.css
@@ -1,12 +1,3 @@
-
-/*
-Template Name: Syndron Admin
-Author: codervent
-Email: codervent@gmail.com
-File: app.css
-*/
-
-
 /*  
   - Google Font
   - General
@@ -26,16 +17,50 @@ File: app.css
   - Forms
   - Responsive
 */
+/* Google Font */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
 
-
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	text-decoration: none;
+	scroll-padding-top: 2rem;
+	list-style: none;
+	scroll-behavior: smooth;
+	font-family: 'DM Sans', sans-serif;
+}
+html{
+	scroll-behavior: smooth;
+}
 body {
+	overflow: overlay;
 	font-size: 14px;
 	color: #4c5258;
 	letter-spacing: .5px;
 	overflow-x:hidden;
 	background-color: #f4f4f4;
 	font-family: Roboto, sans-serif
+}
+:root{
+    --main-color:#ffffff;
+    --second-color:#6994FA;
+}
+::-webkit-scrollbar{
+    background: transparent;
+    width: 10px;
+}
+::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    background-color: var(--second-color);
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color: #90b0fa;
+}
+::-webkit-scrollbar-corner{
+    border-radius: 10px;
 }
 a {
 	text-decoration: none
@@ -67,36 +92,33 @@ a {
 	bottom: 0;
 	padding: 0 20px;
 	z-index: 5;
-	background: #fff;
+	background: var(--second-color);
 	background-clip: padding-box;
-	/* margin-left: 10px; */
 	border-bottom: 1px solid #e4e4e4
 }
 .logo-icon {
-	width: 30px
+	color: var(--main-color);
 }
 .logo-text {
 	font-size: 22px;
 	margin-left: 10px;
 	margin-bottom: 0;
 	letter-spacing: 1px;
-	color: #0d6efd
+	color: var(--main-color)
 }
 .toggle-icon {
 	font-size: 22px;
 	cursor: pointer;
-	color: #0d6efd
+	color: var(--main-color);
 }
 .topbar {
 	position: fixed;
 	top: 0;
-	left: 250px;
+	left: -100%;
 	right: 0;
 	height: 60px;
-	background: #fff;
-	border-bottom: 1px solid rgb(228 228 228 / 0%);
+	background: var(--second-color);
 	z-index: 10;
-	box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075)!important
 }
 .topbar .navbar {
 	width: 100%;
@@ -1428,8 +1450,7 @@ input::placeholder {
 .topbar .navbar .navbar-nav .nav-link {
 	padding-right: .8rem;
 	padding-left: .8rem;
-	color: #252323;
-	font-size: 22px
+	font-size: 22px;
 }
 .dropdown-toggle-nocaret:after {
 	display: none
@@ -1453,23 +1474,22 @@ input::placeholder {
 	width: 42px;
 	height: 42px;
 	border-radius: 50%;
-	border: 0 solid #e5e5e5;
-	padding: 0
+	padding: 0;
+	color: var(--main-color);
 }
 .user-info .user-name {
 	font-size: 15px;
 	font-weight: 500;
-	color: #413c3c
+	color: var(--main-color);
 }
 .user-info .designattion {
 	font-size: 13px;
-	color: #a9a8a8
+	color: var(--main-color);
 }
 .user-box {
 	display: flex;
 	align-items: center;
 	height: 60px;
-	border-left: 1px solid #f0f0f0;
 	margin-left: 1rem
 }
 .dropdown-large {
@@ -1479,10 +1499,8 @@ input::placeholder {
 	width: 360px;
 	border: 0;
 	padding: 0 0;
-	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15)
 }
 .topbar .navbar .dropdown-large .dropdown-menu::after {
-	content: '';
 	width: 13px;
 	height: 13px;
 	background: #fff;
@@ -1607,9 +1625,10 @@ input::placeholder {
 .app-title {
 	font-size: 14px
 }
+.user-box a i,
 .user-box .dropdown-menu i {
 	vertical-align: middle;
-	margin-right: 10px
+	color: var(--main-color);
 }
 .dropdown-menu {
 	-webkit-box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
