--- a/public/CostumStyle/css/homepage.css
+++ b/public/CostumStyle/css/homepage.css
@@ -137,7 +137,7 @@ header .bx{
     padding-bottom: 1.5rem;
 }
 .heading h3{
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 600;
     color: var(--second-color);
 }
@@ -169,16 +169,17 @@ header .bx{
     object-fit: contain;
     object-position: center;
 }
-.explain-container .box h2{
-    font-size: 2rem;
+.explain-container .box h2,
+.about-text h2,
+.app-text h2{
+    font-size: 1.8rem;
     font-weight: 900;
 }
 .explain-container .box p{
     font-size: 1.5rem;
-    font-weight: 5git00;
+    font-weight: 400;
     margin: 0.2rem 0 0.5rem;
     line-height: 1.3em;
-    font-family: 'DM Sans', sans-serif;
 }
 .container{
     display: flex;
@@ -193,10 +194,10 @@ header .bx{
     flex: 1 1 21rem;
 }
 .about-text p, .app .app-text p{
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     margin: 0.5rem 0 1rem;
     text-align: justify;
-    line-height: 1.8rem;
+    line-height: 2rem;
 }
 .about-text .btn{
     padding: 10px 30px;
