--- a/public/CostumStyle/css/regislog.css
+++ b/public/CostumStyle/css/regislog.css
@@ -4,6 +4,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins',sans-serif;
+  text-decoration: none;
+  list-style: none;
 }
 body{
   height: 100vh;
@@ -13,6 +15,45 @@ body{
   justify-content: center;
   background: #fff;
   position: relative;
+}
+header{
+  position: fixed;
+  width: 100%;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 10%;
+  transition: 0.2s;
+}
+.logo .logoname{
+  display: flex;
+  align-items: center;
+  width: 40px;
+  position: relative;
+  color: #6994fa;
+  font-size: 2rem;
+}
+header .bx{
+  color: #fff;
+}
+.navbar{
+  display: flex;
+}
+.navbar a{
+  font-size: 1.3rem;
+  padding: 11px 20px;
+  color: var(--main-color);
+  font-weight: 600;
+  text-transform: uppercase;
+}
+#menu-icon{
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 1001;
+  display: none;
 }
 .style{
   color: #000000;
@@ -59,7 +100,8 @@ body{
   transition: all 0.3s ease;
 }
 .content .input-box input:focus,
-.content .input-box input:valid{
+.content .input-box input:valid,
+.content .input-box input:hover{
   background-color: #f7f2ff;
 }
 .content .input-box label{
@@ -73,7 +115,8 @@ body{
   transition: all 0.3s ease;
 }
 .content .input-box input:focus ~ label,
-.content .input-box input:valid ~ label{
+.content .input-box input:valid ~ label,
+.content .input-box input:hover ~ label{
   top: 0;
   left: 10px;
   display: 14px;
